<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaReceta">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:elegantTextHeight="true"
        android:gravity="center_vertical"
        android:text="@string/titulo_nueva_receta"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/crudNuevoDoctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/crudNuevoDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnCancelarReceta"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="cancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:srcCompat="@drawable/cancel"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/descCancelar" />

        <ImageButton
            android:id="@+id/btnAddReceta"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="confirmarGuardarReceta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/descAgregar" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/crudNuevoDoctor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crudNuevoDoctor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:text="@string/text_lblInfPersonal"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconCheckable="false"
                app:startIconDrawable="@drawable/calendar_icon">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFechaNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:hint="@string/text_lblFecha"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_fecha" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/id_icon">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombreNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:hint="@string/text_lblNombre"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_nombres" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/id_icon">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtApellidosP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:hint="@string/text_lblApellidos"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_apellidos" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    app:startIconDrawable="@drawable/weight_icon">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPesoNR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:elegantTextHeight="true"
                        android:hint="@string/text_lblPeso"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:tooltipText="@string/tooltip_peso" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    app:startIconDrawable="@drawable/heigth_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEstaturaNR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        android:layout_marginEnd="5sp"
                        android:elegantTextHeight="true"
                        android:hint="@string/text_lblEstatura"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:tooltipText="@string/tooltip_estatura" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    app:startIconDrawable="@drawable/age_icon">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEdadNR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        android:elegantTextHeight="true"
                        android:hint="@string/text_lblEdad"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:tooltipText="@string/tooltip_edad" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/sex_icon">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSexoNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:hint="@string/text_lblSexo"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_sexo" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elegantTextHeight="true"
                android:text="@string/text_lblInfTratamiento"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/doctor_icon">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMedicoNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:hint="@string/text_lblMedico"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_medico" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/hospital2_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCentroNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:hint="@string/text_lblUMF"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_umf" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/diagnostic_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDiagnosticoNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"

                    android:hint="@string/text_lblDiagnostico"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_diagnostico" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:startIconDrawable="@drawable/treatment_icon">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDetallesNR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:hint="@string/text_lblDetalles"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:tooltipText="@string/tooltip_detalles" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>